fixed spacing on style contact

--- a/Art Odyssey/style-contact.css
+++ b/Art Odyssey/style-contact.css
@@ -15,6 +15,7 @@ body {
   border-radius: 5px;
   padding: 20px;
   box-sizing: border-box;
+  margin-bottom:15px;
 }
 
 .contact-headings {
@@ -34,6 +35,7 @@ body {
   border-radius: 5px;
   padding: 20px;
   box-sizing: border-box;
+  margin-bottom: 2%;
 }
 
 @media (max-width: 992px) {
